--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/all.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="https://kassemhachi.github.io/Simple-page-with-bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://kassemhachi.github.io/Simple-page-with-bootstrap/css/all.css">
+    <link rel="stylesheet" href="https://kassemhachi.github.io/Simple-page-with-bootstrap/css/main.css">
     <title>Fisrt page </title>
 </head>
 
@@ -284,10 +284,10 @@
 
 
     
-    <script src="/js/jquery-3.4.1.slim.min.js "></script>
-    <script src="/js/popper.min.js "></script>
-    <script src="/js/bootstrap.min.js "></script>
-    <script src="/js/script.js "></script>
+    <script src="https://kassemhachi.github.io/Simple-page-with-bootstrap/js/jquery-3.4.1.slim.min.js "></script>
+    <script src="https://kassemhachi.github.io/Simple-page-with-bootstrap/js/popper.min.js "></script>
+    <script src="https://kassemhachi.github.io/Simple-page-with-bootstrap/js/bootstrap.min.js "></script>
+    <script src="https://kassemhachi.github.io/Simple-page-with-bootstrap/js/script.js "></script>
 </body>
 
 </html>
